# dont-repeat-yourself

./: Cargo.toml  README.md  flake.nix  package.nix  shell.nix
.github/workflows/: rust.yml
src/: app.rs  clipboard.rs  data.rs  main.rs
