[package]
name = "dont-repeat-yourself"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11-clipboard = { git = "https://github.com/StellarWitch7/x11-clipboard.git" }
ciborium = "0.2.2"
directories = "5.0.1"
eframe = "0.29.1"
serde = "1.0.213"
x11rb = "0.13.1"
